--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@ mixpanel.init("b05bc1152350834ce26780daaa463821");</script><!-- end Mixpanel -->
                     <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-caption">
                             <h4>Performing</h4>
-                            <!--<p class="text-muted">Make it Unforgettable</p>-->
+			    <p class="text-muted"></p>
                         </div>
                     </a>
                 </div>
@@ -187,7 +187,7 @@ mixpanel.init("b05bc1152350834ce26780daaa463821");</script><!-- end Mixpanel -->
                     <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-caption">
                             <h4>Lessons</h4>
-                            <!--<p class="text-muted">Give the Gift of Music</p>-->
+                            <p class="text-muted"></p>
                         </div>
 		    </a>
 		</div>
