--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@ mixpanel.init("b05bc1152350834ce26780daaa463821");</script><!-- end Mixpanel -->
                         </div>
 		    </a>
 		</div>
-                <div class="col-md-4 col-sm-6 portfolio-item" style="opacity:0.75">
+                <div class="col-md-4 col-sm-6 portfolio-item" style="opacity:0.25; -webkit-filter: grayscale(100%); filter: grayscale(100%);">
                     <!--<a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">-->
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
