--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@ mixpanel.init("b05bc1152350834ce26780daaa463821");</script><!-- end Mixpanel -->
                     <!--<a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">-->
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
-                                <i class="fa fa-ellipsis-h fa-3x"></i>
+                                <!--<i class="fa fa-ellipsis-h fa-3x"></i>-->
                             </div>
                         </div>
                         <img src="img/portfolio/events.jpg" class="img-responsive" alt="">
@@ -179,7 +179,7 @@ mixpanel.init("b05bc1152350834ce26780daaa463821");</script><!-- end Mixpanel -->
                     <!--<a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">-->
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
-                                <i class="fa fa-ellipsis-h fa-3x"></i>
+                                <!--<i class="fa fa-ellipsis-h fa-3x"></i>-->
                             </div>
                         </div>
                         <img src="img/portfolio/lessons.jpg" class="img-responsive" alt="">
