--- a/index.html
+++ b/index.html
@@ -176,15 +176,17 @@ mixpanel.init("b05bc1152350834ce26780daaa463821");</script><!-- end Mixpanel -->
                     </a>
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
-                    <!--<a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">-->
-                        <div class="portfolio-hover">
+                    <a class="portfolio-link" data-toggle="modal">
+<!--
+			<div class="portfolio-hover">
                             <div class="portfolio-hover-content">
-                                <!--<i class="fa fa-ellipsis-h fa-3x"></i>-->
+                                <i class="fa fa-ellipsis-h fa-3x"></i>
                             </div>
                         </div>
+-->
                         <img src="img/portfolio/lessons.jpg" class="img-responsive" alt="">
-                    <!--</a>-->
-                    <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
+                    </a>
+                    <a class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-caption">
                             <h4>Lessons</h4>
                             <p class="text-muted">&nbsp;</p>
@@ -192,20 +194,22 @@ mixpanel.init("b05bc1152350834ce26780daaa463821");</script><!-- end Mixpanel -->
 		    </a>
 		</div>
                 <div class="col-md-4 col-sm-6 portfolio-item" style="opacity:0.25; -webkit-filter: grayscale(100%); filter: grayscale(100%);">
-                    <!--<a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">-->
-                        <div class="portfolio-hover">
+                    <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
+<!--
+			<div class="portfolio-hover">
                             <div class="portfolio-hover-content">
-                                <!--<i class="fa fa-ellipsis-h fa-3x"></i>-->
+                                <i class="fa fa-ellipsis-h fa-3x"></i>
                             </div>
                         </div>
+-->
                         <img src="img/portfolio/events.jpg" class="img-responsive" alt="">
-                    <!--</a>-->
-                    <!--<a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">-->
+                    </a>
+                    <a class="portfolio-link" data-toggle="modal">-->
                         <div class="portfolio-caption">
                             <h4>Blog</h4>
                             <p class="text-muted">(coming soon)</p>
                         </div>
-                    <!--</a>-->
+                    </a>
                 </div>
             </div>
         </div>
