--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@ mixpanel.init("b05bc1152350834ce26780daaa463821");</script><!-- end Mixpanel -->
 -->
                         <img src="img/portfolio/events.jpg" class="img-responsive" alt="">
                     </a>
-                    <a class="portfolio-link" data-toggle="modal">-->
+                    <a class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-caption">
                             <h4>Blog</h4>
                             <p class="text-muted">(coming soon)</p>
