--- a/index.html
+++ b/index.html
@@ -160,14 +160,16 @@ mixpanel.init("b05bc1152350834ce26780daaa463821");</script><!-- end Mixpanel -->
             </div>
             <div class="row">
                 <div class="col-md-4 col-sm-6 portfolio-item">
-                    <!--<a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">-->
-                        <div class="portfolio-hover">
+                    <a class="portfolio-link" data-toggle="modal">
+<!--
+			<div class="portfolio-hover">
                             <div class="portfolio-hover-content">
-                                <!--<i class="fa fa-ellipsis-h fa-3x"></i>-->
+                                <i class="fa fa-ellipsis-h fa-3x"></i>
                             </div>
                         </div>
+-->
                         <img src="img/portfolio/events.jpg" class="img-responsive" alt="">
-                    <!--</a>-->
+                    </a>
                     <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-caption">
                             <h4>Performing</h4>
