--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@ mixpanel.init("b05bc1152350834ce26780daaa463821");</script><!-- end Mixpanel -->
                     <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-caption">
                             <h4>Performing</h4>
-			    <p class="text-muted">&nbsp;</p>
+			    <p class="text-muted">&#8203;</p>
                         </div>
                     </a>
                 </div>
@@ -191,7 +191,7 @@ mixpanel.init("b05bc1152350834ce26780daaa463821");</script><!-- end Mixpanel -->
                     <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-caption">
                             <h4>Lessons</h4>
-                            <p class="text-muted">&nbsp;</p>
+                            <p class="text-muted">&#8203;</p>
                         </div>
 		    </a>
 		</div>
