--- a/index.html
+++ b/index.html
@@ -414,7 +414,11 @@ mixpanel.init("b05bc1152350834ce26780daaa463821");</script><!-- end Mixpanel -->
                             <div class="modal-body">
                                 <h2>Weddings</h2>
                                 <p class="item-intro text-muted">"The best thing to hold on to in life is each other." -Audrey Hepburn</p>
-                                <img class="img-responsive img-centered" src="img/portfolio/weddings-large.jpg" alt="">
+				<div>
+                                	<img class="img-responsive" style="width:33%; padding:0px; margin:-1px;" src="img/portfolio/performances-1.jpg" alt="">
+                                	<img class="img-responsive" style="width:33%; padding:0px; margin:-1px;" src="img/portfolio/performances-2.jpg" alt="">
+                                	<img class="img-responsive" style="width:33%; padding:0px; margin:-1px;" src="img/portfolio/performances-3.jpg" alt="">
+				</div>
                                 <p>Harp music adds an elegant, romantic touch to weddings. Make your special day extraordinary with harp music for your ceremony, reception, or cocktail hour! Packages available. Please email for details.</p>
                                 <p><strong>Reviews</strong></p>
                                 <p>"Elizabeth did a beautiful job performing harp at our wedding. She was able to learn a song we requested specifically for this occasion and everyone was delighted!" -Hanna W.</p>
