--- a/index.html
+++ b/index.html
@@ -412,19 +412,66 @@ mixpanel.init("b05bc1152350834ce26780daaa463821");</script><!-- end Mixpanel -->
                     <div class="row">
                         <div class="col-lg-8 col-lg-offset-2">
                             <div class="modal-body">
-                                <h2>Weddings</h2>
-                                <p class="item-intro text-muted">"The best thing to hold on to in life is each other." -Audrey Hepburn</p>
-				<div>
+                                <h2>Performing</h2>
+                                <p class="item-intro text-muted">"Music expresses that which cannot be put into words and that which cannot remain silent." -Victor Hugo</p>
+				<div style="margin-bottom:32px;">
                                 	<img class="img-responsive" style="width:33%; padding:0px; margin:-1px;" src="img/portfolio/performances-1.jpg" alt="">
                                 	<img class="img-responsive" style="width:33%; padding:0px; margin:-1px;" src="img/portfolio/performances-2.jpg" alt="">
                                 	<img class="img-responsive" style="width:33%; padding:0px; margin:-1px;" src="img/portfolio/performances-3.jpg" alt="">
 				</div>
-                                <p>Harp music adds an elegant, romantic touch to weddings. Make your special day extraordinary with harp music for your ceremony, reception, or cocktail hour! Packages available. Please email for details.</p>
+                                <p style="text-align: justify;">
+					Harp music adds beauty and sophistication to weddings and events. 
+					Make your special occasion extraordinary by reserving harp music.	
+				</p>
+                                <p style="text-align: justify;">
+					I have performed for hundreds of weddings and countless events. 
+					My specialty is customizing each performance. 
+					Do you have a specific song you would like performed for your wedding or event? 
+					I am flexible and able to customize my repertoire, genre of music, and attire to best contribute music and ambiance for each of my clients.
+				</p>
+                                <p style="text-align: justify;">
+					<strong>Wedding Music</strong>
+				</p>
+                                <p style="text-align: justify;">
+					My Wedding Ceremony Package includes:
+				</p>
+				<ul style="text-align: justify;">
+					<li style="padding-top: 8px;">15-20 minutes of prelude music while guests find their seats</li>
+					<li style="padding-top: 8px;">Processional music for bridal party and bride to enter</li>
+					<li style="padding-top: 8px;">Any special music requested during the ceremony itself (for instance, during a candle lighting or sand ceremony)</li>
+					<li style="padding-top: 8px;">Recessional music while bridal party and guests exit</li>
+					<li style="padding-top: 8px;">Amplification</li>
+				</ul>
+                                <p style="text-align: justify;">
+					Background music for cocktail hours and receptions is another service I provide either in addition to ceremony music or by itself.
+				</p>
+                                <p style="text-align: justify;">
+					<a href="/resources/WeddingRepertoire.pdf">Click here for my wedding repertoire</a>. Please note that I can learn special requests.
+				</p>
+				<iframe width="560" height="315" src="https://www.youtube.com/embed/gvAvFBcJ8Vs" frameborder="0" allowfullscreen></iframe>
+                                <p style="text-align: justify;">
+					<strong>Other Special Occasions Include:</strong>
+				</p>
+				<ul style="text-align: justify;">
+					<li style="padding-top: 8px;">Wine Tastings</li>
+					<li style="padding-top: 8px;">Holiday Parties</li>
+					<li style="padding-top: 8px;">Receptions</li>
+					<li style="padding-top: 8px;">Grand Openings</li>
+					<li style="padding-top: 8px;">Anniversary Parties</li>
+					<li style="padding-top: 8px;">Memorial Services</li>
+					<li style="padding-top: 8px;">Senior Home Events</li>
+					<li style="padding-top: 8px;">Bridal Showers</li>
+				</ul>
+                                <p style="text-align: justify;">
+					<a href="/resources/GeneralRepertoire.pdf">Click here for my general repertoire list</a>. 
+					Please note that I can learn special requests if you have a specific song in mind for your event.
+					Please email with details about your event to request a custom quote.				
+				</p>
                                 <p><strong>Reviews</strong></p>
                                 <p>"Elizabeth did a beautiful job performing harp at our wedding. She was able to learn a song we requested specifically for this occasion and everyone was delighted!" -Hanna W.</p>
-                                <p>"The harp was so dreamy and romantic to listen to! It was perfect for our wedding day!" - Kayla D.</p>
-                                <p>"I hired Elizabeth to surprise my wife with harp music on our wedding day. My bride loved it! I highly recommend." -James K.
-                                <p>
+                                <p>"The harp was so dreamy and romantic to listen to! It was perfect for our wedding day!" -Kayla D.</p>
+                                <p>"We love having Elizabeth perform at our wine tastings. Our guests really enjoy her beautiful talent." -Rocky Pond Winery</p>
+                                <p>"Elizabeth has a great way of engaging her audience, which is the most important thing I look for when booking entertainment." -Aegis Living of Bellevue</p>
                                 <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close </button>
                             </div>
                         </div>
