--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@ mixpanel.init("b05bc1152350834ce26780daaa463821");</script><!-- end Mixpanel -->
 					Do you have a specific song you would like performed for your wedding or event? 
 					I am flexible and able to customize my repertoire, genre of music, and attire to best contribute music and ambiance for each of my clients.
 				</p>
-                                <p style="text-align: justify;">
+                                <p style="text-align: justify; margin-top: 32px;">
 					<strong>Wedding Music</strong>
 				</p>
                                 <p style="text-align: justify;">
@@ -442,15 +442,17 @@ mixpanel.init("b05bc1152350834ce26780daaa463821");</script><!-- end Mixpanel -->
 					<li style="padding-top: 8px;">Recessional music while bridal party and guests exit</li>
 					<li style="padding-top: 8px;">Amplification</li>
 				</ul>
-                                <p style="text-align: justify;">
+                                <p style="text-align: justify; margin-top: 32px;">
 					Background music for cocktail hours and receptions is another service I provide either in addition to ceremony music or by itself.
 				</p>
                                 <p style="text-align: justify;">
-					<a href="/resources/WeddingRepertoire.pdf">Click here for my wedding repertoire</a>. Please note that I can learn special requests.
+					<a href="/resources/WeddingRepertoire.pdf" target="_blank" style="color: #003366">Click here for my wedding repertoire</a>. Please note that I can learn special requests.
 				</p>
+                                <p style="text-align: justify; margin-top: 32px;"><strong>Sample Songs</strong></p>
 				<iframe width="560" height="315" src="https://www.youtube.com/embed/gvAvFBcJ8Vs" frameborder="0" allowfullscreen></iframe>
-                                <p style="text-align: justify;">
-					<strong>Other Special Occasions Include:</strong>
+				<iframe width="560" height="315" src="https://www.youtube.com/embed/WFBFwyKoOC0" frameborder="0" allowfullscreen></iframe>
+				<p style="text-align: justify; margin-top: 32px;">
+					<strong>Other Special Occasions Include</strong>
 				</p>
 				<ul style="text-align: justify;">
 					<li style="padding-top: 8px;">Wine Tastings</li>
@@ -462,16 +464,16 @@ mixpanel.init("b05bc1152350834ce26780daaa463821");</script><!-- end Mixpanel -->
 					<li style="padding-top: 8px;">Senior Home Events</li>
 					<li style="padding-top: 8px;">Bridal Showers</li>
 				</ul>
-                                <p style="text-align: justify;">
-					<a href="/resources/GeneralRepertoire.pdf">Click here for my general repertoire list</a>. 
+                                <p style="text-align: justify; margin-top: 32px;">
+					<a href="/resources/GeneralRepertoire.pdf" target="_blank" style="color: #003366">Click here for my general repertoire list</a>. 
 					Please note that I can learn special requests if you have a specific song in mind for your event.
 					Please email with details about your event to request a custom quote.				
 				</p>
-                                <p><strong>Reviews</strong></p>
-                                <p>"Elizabeth did a beautiful job performing harp at our wedding. She was able to learn a song we requested specifically for this occasion and everyone was delighted!" -Hanna W.</p>
-                                <p>"The harp was so dreamy and romantic to listen to! It was perfect for our wedding day!" -Kayla D.</p>
-                                <p>"We love having Elizabeth perform at our wine tastings. Our guests really enjoy her beautiful talent." -Rocky Pond Winery</p>
-                                <p>"Elizabeth has a great way of engaging her audience, which is the most important thing I look for when booking entertainment." -Aegis Living of Bellevue</p>
+                                <p style="text-align: justify; margin-top: 32px;"><strong>Reviews</strong></p>
+                                <p style="text-align: justify;">"Elizabeth did a beautiful job performing harp at our wedding. She was able to learn a song we requested specifically for this occasion and everyone was delighted!" -Hanna W.</p>
+                                <p style="text-align: justify;">"The harp was so dreamy and romantic to listen to! It was perfect for our wedding day!" -Kayla D.</p>
+                                <p style="text-align: justify;">"We love having Elizabeth perform at our wine tastings. Our guests really enjoy her beautiful talent." -Rocky Pond Winery</p>
+                                <p style="text-align: justify;">"Elizabeth has a great way of engaging her audience, which is the most important thing I look for when booking entertainment." -Aegis Living of Bellevue</p>
                                 <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close </button>
                             </div>
                         </div>
