--- a/index.html
+++ b/index.html
@@ -377,7 +377,12 @@ mixpanel.init("b05bc1152350834ce26780daaa463821");</script><!-- end Mixpanel -->
                                 <p style="text-align: justify;">
 					For every hour enrolled in music lessons, you are investing in at least two hours of your teacher’s time.
 				</p>
-				<p style="text-align: justify;">
+                                <p style="text-align: justify; margin-top: 32px;"><strong>Student Showcase</strong></p>
+				<iframe width="560" height="315" src="https://www.youtube.com/embed/STlSajr_Lyc" frameborder="0" allowfullscreen></iframe>
+                                <p style="text-align: justify; margin-top: 32px;">
+                                	Review <u><a href="https://www.youtube.com/channel/UC2VBVhDpYGPqg6Lfu4oOPeQ" target="_blank" style="color: #003366">my student YouTuBe channel.</a></u>.
+                                </p>
+				<p style="text-align: justify; margin-top: 32px;">
                                    <strong>Reviews</strong>
 				</p>
                                 <p style="text-align: justify;">
