--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@ mixpanel.init("b05bc1152350834ce26780daaa463821");</script><!-- end Mixpanel -->
                                 <p style="text-align: justify; margin-top: 32px;"><strong>Student Showcase</strong></p>
 				<iframe width="560" height="315" src="https://www.youtube.com/embed/STlSajr_Lyc" frameborder="0" allowfullscreen></iframe>
                                 <p style="text-align: justify; margin-top: 32px;">
-                                	Review <u><a href="https://www.youtube.com/channel/UC2VBVhDpYGPqg6Lfu4oOPeQ" target="_blank" style="color: #003366">my student YouTuBe channel.</a></u>.
+                                	Review <u><a href="https://www.youtube.com/channel/UC2VBVhDpYGPqg6Lfu4oOPeQ" target="_blank" style="color: #003366">my student YouTube channel.</a></u>.
                                 </p>
 				<p style="text-align: justify; margin-top: 32px;">
                                    <strong>Reviews</strong>
@@ -451,7 +451,7 @@ mixpanel.init("b05bc1152350834ce26780daaa463821");</script><!-- end Mixpanel -->
 					Background music for cocktail hours and receptions is another service I provide either in addition to ceremony music or by itself.
 				</p>
                                 <p style="text-align: justify;">
-					<a href="/resources/WeddingRepertoire.pdf" target="_blank" style="color: #003366">Click here for my wedding repertoire</a>. Please note that I can learn special requests.
+					<u><a href="/resources/WeddingRepertoire.pdf" target="_blank" style="color: #003366">Click here for my wedding repertoire</a></u>. Please note that I can learn special requests.
 				</p>
                                 <p style="text-align: justify; margin-top: 32px;"><strong>Sample Songs</strong></p>
 				<iframe width="560" height="315" src="https://www.youtube.com/embed/gvAvFBcJ8Vs" frameborder="0" allowfullscreen></iframe>
@@ -470,7 +470,7 @@ mixpanel.init("b05bc1152350834ce26780daaa463821");</script><!-- end Mixpanel -->
 					<li style="padding-top: 8px;">Bridal Showers</li>
 				</ul>
                                 <p style="text-align: justify; margin-top: 32px;">
-					<a href="/resources/GeneralRepertoire.pdf" target="_blank" style="color: #003366">Click here for my general repertoire list</a>. 
+					<u><a href="/resources/GeneralRepertoire.pdf" target="_blank" style="color: #003366">Click here for my general repertoire list</a></u>. 
 					Please note that I can learn special requests if you have a specific song in mind for your event.
 					Please email with details about your event to request a custom quote.				
 				</p>
